feat : post penalty apiを実装しました。
